fixed gap in mobile screen

--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,10 +1,20 @@
 @media (max-width: 899.99px) {
-    .footer__list {
-        margin-top: 32px;
+    .footer__wrapper {
+        padding-top: 32px;
+
+        .footer__list {
+            margin-top: 32px;
+        }
     }
 }
 
 @media (max-width: 599.99px) {
+
+    .footer__name,
+    .footer__description {
+        margin-bottom: 24px;
+    }
+
     .footer__list {
         margin-left: 12px;
     }
